simple home page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -30,4 +30,18 @@ import Layout from "../layouts/BlogPost.astro";
     which I've been developing since 2018 when Flutter was still in its beta
     version.
   </p>
+
+  <h3>Professional Work</h3>
+  <p>
+    You may find my complete resume on Linkedin, but here are a few companies
+    that I worked with:
+    <pre>
+		- Rivian
+		- Turing.com
+		- CoderPad
+		- BairesDev
+		- DivBrands
+		- OffScript
+		</pre>
+  </p>
 </Layout>
