--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,12 +15,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
     <main>
       <h1>🧑‍🚀 Hello, Astronaut!</h1>
       <p>
-        Welcome to the official <a href="https://astro.build/">Astro</a> blog starter
-        template. This template serves as a lightweight, minimally-styled starting
-        point for anyone looking to build a personal website, blog, or portfolio
-        with Astro.
+        This portfolio blog is yet under construction (I am migrating an old
+        Nuxt version to Astro!). But feel free to wonder around :)
       </p>
-      <p>
+      <!-- <p>
         This template comes with a few integrations already configured in your
         <code>astro.config.mjs</code> file. You can customize your setup with
         <a href="https://astro.build/integrations">Astro Integrations</a> to add
@@ -44,19 +42,14 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
             >src/layouts/BlogPost.astro</code
           >
         </li>
-      </ul>
+      </ul> -->
       <p>
-        Have fun! If you get stuck, remember to <a
-          href="https://docs.astro.build/"
-          >read the docs
-        </a> or <a href="https://astro.build/chat">join us on Discord</a> to ask
-        questions.
+        Have fun! You can check some Flutter projects at <a href="/blog">Blog</a
+        > or <a href="/about">About</a> to know a little more about me.
       </p>
       <p>
-        Looking for a blog template with a bit more personality? Check out <a
-          href="https://github.com/Charca/astro-blog-template"
-          >astro-blog-template
-        </a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
+        you can find my Twitter, Linkedin and Github around this page somewhere.
+        :)
       </p>
     </main>
     <Footer />
